--- a/sgim/templates/inventario/dispositivo_detalle.html
+++ b/sgim/templates/inventario/dispositivo_detalle.html
@@ -3,16 +3,12 @@
 {% block include_statics %}
 
 <link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
     
 <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
 <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxtabs.js"></script>
 
-<style>
-	#mytab:hover{
-		background-color: yellow
-	}
-</style>
+
 {% endblock include_statics %}
 
 {% block contenido %}
@@ -42,51 +38,124 @@
 			                <li>Python</li>
 			                <li>Perl</li>
 			            </ul>
-			            <div class="container-fluid">	
-			            <p></p>		            	
-			            	<div class="ui items">
+			            <div class="container-fluid">
+			            	<div class="ui items" style="padding:10px">
 							  <div class="item">
 							    <div class="content">
-							      <h5 class="header">{{dispositivo}} </h5>
-							      <div class="description">
-							        <p><label>Marca:</label>&nbsp;	 {{dispositivo.marca}} </p>
-							        <p><label>Modelo:</label>&nbsp;	 {{dispositivo.modelo}} </p>
-							        <p><label>Inventario:</label>&nbsp;	 {{dispositivo.inventario}} </p>
-							        <p><label>Serie:</label>&nbsp;	 {{dispositivo.serie}} </p>
-							        
-							      </div>
+							      	<h3 class="ui dividing purple header">
+									  <i class="terminal icon"></i>
+									  <div class="content">
+									    {{dispositivo}}
+									  </div>
+									</h3>
+									<br>								
+							      
+							      	<div class="row">
+							      		<div class="col-md-6">
+											<table class="ui definition green table">
+												<tbody>
+													<tr>
+														<td>Marca</td>
+														<td>{{dispositivo.marca}} </td>
+													</tr>
+													<tr>
+														<td>Modelo</td>
+														<td> {{dispositivo.modelo}}</td>
+													</tr>
+													<tr>
+														<td>Serie</td>
+														<td> {{dispositivo.serie}} </td>
+													</tr>
+													<tr>
+														<td>Inventario</td>
+														<td>  {{dispositivo.inventario}}</td>
+													</tr>
+													<tr>
+														<td>Estado</td>
+														<td>  {{dispositivo.estado}}</td>
+													</tr>
+												</tbody>
+											</table>
+							      		</div>
+							      		<div class="col-md-6">
+											<table class="ui definition blue table">	
+												<tbody>
+													<tr>
+														<td>Edificio</td>
+														<td>{{dispositivo.edificio}} </td>
+													</tr>
+													<tr>
+														<td>Oficina</td>
+														<td> {{dispositivo.oficina}}</td>
+													</tr>
+													<tr>
+														<td>Sistema</td>
+														<td> {{dispositivo.sistema}} </td>
+													</tr>
+													<tr>
+														<td>Tipo</td>
+														<td>  {{dispositivo.tipo}}</td>
+													</tr>
+													<tr>
+														<td>Instalacion</td>
+														<td>  
+															{{dispositivo.instalacion}} 
+															(<i class="icon ion-ios-clock-outline"></i>{{dispositivo.instalacion|timesince}})
+														</td>
+													</tr>
+												</tbody>
+											</table>
+							      		</div>
+							      	</div>
+							      
 							      <div class="extra">
-									<div class="ui icon tiny bottom blue left pointing dropdown button">
-									    <i class="print icon"></i> Imprimir
-									    <div class="menu">
-									      <div class="item">Incidencias</div>
-									      <div class="item">Mantenimientos</div>
-									      <div class="item">Todo</div>
-									    </div>
+									<!-- Single button -->
+									<div class="btn-group dropup">
+									  <button type="button" class="btn btn-xs btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+									  	<i class="icon ion-printer"></i>
+									    PDF <span class="caret"></span>
+									  </button>
+									  <ul class="dropdown-menu" role="menu">
+										<li>
+									    	<a href="#">
+									    		<i class="icon wrench"></i>Mantenimientos
+									    	</a>
+									    </li>
+										<li>
+											<a href="#">
+												<i class="icon ion-flash"></i>Incidencias
+											</a>
+										</li>									    
+									    <li>
+											<a href="#"><i class="icon ion-folder"></i>Todo</a>
+										</li>
+									  </ul>
 									</div>
+									<!-- Single button -->
+
 							      </div>
 							    </div>
 							  </div>
 							</div>
 			            </div>
 			            <div class="container-fluid">
-			                JavaServer Pages (JSP) is a Java technology that helps software developers serve
-			                dynamically generated web pages based on HTML, XML, or other document types. Released
-			                in 1999 as Sun's answer to ASP and PHP,[citation needed] JSP was designed to address
-			                the perception that the Java programming environment didn't provide developers with
-			                enough support for the Web. To deploy and run, a compatible web server with servlet
-			                container is required. The Java Servlet and the JavaServer Pages (JSP) specifications
-			                from Sun Microsystems and the JCP (Java Community Process) must both be met by the
-			                container.
+			                <div class="row" style="padding:10px">
+			                	<div class="col-md-12">
+			                		Incidencias <br>
+			                		{% for incidente in  incidencias %}
+			                			{{incidente}} <br>
+			                		{% endfor %}
+			                	</div>
+			                </div>
 			            </div>
 			            <div class="container-fluid">
-			                ASP.NET is a web application framework developed and marketed by Microsoft to allow
-			                programmers to build dynamic web sites, web applications and web services. It was
-			                first released in January 2002 with version 1.0 of the .NET Framework, and is the
-			                successor to Microsoft's Active Server Pages (ASP) technology. ASP.NET is built
-			                on the Common Language Runtime (CLR), allowing programmers to write ASP.NET code
-			                using any supported .NET language. The ASP.NET SOAP extension framework allows ASP.NET
-			                components to process SOAP messages.
+			                <div class="row" style="padding:10px">
+			                	<div class="col-md-12">
+			                		{% for mantto in  manttos %}
+			                			{{mantto}} <br>
+			                		{% endfor %}
+			                	</div>
+			                </div>
 			            </div>
 			            <div class="container-fluid">
 			                Python is a general-purpose, high-level programming language[5] whose design philosophy
@@ -126,14 +195,8 @@
 
 <script>
 	$(document).ready(function() {
-		 $('#jqxTabs').jqxTabs({ width: '90%', position: 'top', animationType: 'fade', theme:"metro" });
+		 $('#jqxTabs').jqxTabs({ width: '90%', position: 'top', animationType: 'fade', theme:"energyblue" });
 		   
-		   $('.dropdown')
-  .dropdown({
-    // you can use any ui transition
-    transition: 'drop'
-  })
-;
 
 	});
 
