--- a/sgim/templates/report_base.html
+++ b/sgim/templates/report_base.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-
+<head lang="es">
+    <meta charset="iso-8859-1">
     <title></title>
      
     <link rel="stylesheet" href="/static/css/report.css">
@@ -17,10 +16,11 @@
  @page {
         size: letter ;
         /*top right buttom left*/
-        margin: 2cm;
+        margin: 2.5cm 1.5cm 2cm 1.5cm ;
+
          @frame header_frame {           /* Static Frame */
             -pdf-frame-content: header_content;
-            width: 100%; top: 1cm; height: 40pt;
+            width: 100%; top: 1.5cm; height: 40pt;
         }
         
         @frame footer_frame {           /* Another static Frame */
@@ -39,8 +39,8 @@
 {% endblock contenido %}
 
  <!-- Content for Static Frame 'footer_frame' -->
-    <div id="footer_content">(c) - page <pdf:pagenumber>
-        of <pdf:pagecount>
+    <div id="footer_content">(c) - pagina <pdf:pagenumber>
+        de <pdf:pagecount>
     </div>
 </body>
 </html>
