--- a/sgim/static/css/report.css
+++ b/sgim/static/css/report.css
@@ -2,8 +2,8 @@ table , td {
     border: 0px solid #80DEEA;
     border-collapse: collapse;
 }
-td {
-    padding: 3px;
+td, th{
+    padding: 3px 3px 1px 1px ;
     text-align: center;
 }
 
