--- a/sgim/templates/inventario/dispositivos.html
+++ b/sgim/templates/inventario/dispositivos.html
@@ -130,10 +130,10 @@ $(document).ready(function() {
                     // appends buttons to the status bar.
                     var container = $("<div style='margin:5px;'></div>");
                     var viewButton = $("<div class='ui  tiny blue button'> Ver detalles</div>");
-                    var deleteButton = $("<div class='ui tiny green button'>Ver PDF</div>");
+                    var listButton = $("<div class='ui tiny green button'>Listado PDF</div>");
                    
                     container.append(viewButton);
-                   //  container.append(deleteButton);
+                    container.append(listButton);
                     statusbar.append(container);
                    
                     // add new row.
@@ -144,12 +144,12 @@ $(document).ready(function() {
                       win.focus(); 
                         //$("#jqxgrid").jqxGrid('addrow', null, datarow[0]);
                     });
-                    // delete selected row.
-                    deleteButton.click(function (event) {
-                        var selectedrowindex = $("#jqxgrid").jqxGrid('getselectedrowindex');
-                        var rowscount = $("#jqxgrid").jqxGrid('getdatainformation').rowscount;
-                        var id = $("#jqxgrid").jqxGrid('getrowid', selectedrowindex);
+                    // list selected row.
+                    listButton.click(function (event) {
                         //$("#jqxgrid").jqxGrid('deleterow', id);
+                      var win = window.open('/inventario/dispositivos/reporte/listado/',
+                       '_blank');
+                      win.focus(); 
                     });
                 },
             });
