--- a/sgim/templates/inventario/reportes/disp_todo.html
+++ b/sgim/templates/inventario/reportes/disp_todo.html
@@ -53,7 +53,7 @@
 		<table style="width:100%; border: double 1px #BDBDBD;">
 			<tr>
 				<td colspan="6" style="background-color:#2196F3; color:white">
-					{{dispositivo.tipo}}
+				<strong>	{{dispositivo.tipo}}</strong>
 				</td>
 			</tr>
 			<tr>
@@ -89,7 +89,9 @@
 		<table style="width:100%; border: double 1px #BDBDBD;">
 		{% for comp in dispositivo.componente_set.all  %}
 			<tr>
-				<td colspan="6" style="background-color:#00BCD4; color:white">{{comp.tipo}}</td>
+				<td colspan="6" style="background-color:#00BCD4; color:white">
+					<strong>{{comp.tipo}}</strong> 
+				</td>
 			</tr>	
 			<tr>
 			    <th style="text-align:right; width:30%">Marca:&nbsp; </th>
@@ -124,13 +126,13 @@
 				<td colspan="1" class="titulo_inc">{{inc.estado}}</td>
 			</tr>		
 			<tr>
-			    <td class="sub_titulo_inc"> Reporto</td>
-			    <td class="sub_titulo_inc">Medio</td>
-			    <td class="sub_titulo_inc">Urgencia</td>
-			    <td class="sub_titulo_inc">Severidad</td>	
-			    <td class="sub_titulo_inc">Relacion</td>
-			    <td class="sub_titulo_inc">Paro de Equipo</td>	
-			    <td class="sub_titulo_inc">Duracion de Paro</td>	
+			    <th class="sub_titulo_inc"> Reporto</th>
+			    <th class="sub_titulo_inc">Medio</th>
+			    <th class="sub_titulo_inc">Urgencia</th>
+			    <th class="sub_titulo_inc">Severidad</th>	
+			    <th class="sub_titulo_inc">Relacion</th>
+			    <th class="sub_titulo_inc">Paro de Equipo</th>	
+			    <th class="sub_titulo_inc">Duracion de Paro</th>	
 			</tr>
 			<tr>
 			    <td> {{inc.reporta}} </td>
@@ -142,9 +144,9 @@
 			    <td>{{inc.duracion_paro}} min</td>	
 			</tr>
 			<tr>
-			    <td class="sub_titulo_inc2" colspan="2" style="text-align:left">Problema</td>
-			    <td class="sub_titulo_inc2" colspan="2" style="text-align:left">Causa</td>
-			    <td class="sub_titulo_inc2" colspan="3" style="text-align:left">Solucion</td>			    	
+			    <th class="sub_titulo_inc2" colspan="2" style="text-align:left">Problema</th>
+			    <th class="sub_titulo_inc2" colspan="2" style="text-align:left">Causa</th>
+			    <th class="sub_titulo_inc2" colspan="3" style="text-align:left">Solucion</th>			    	
 			</tr>
 			<tr>
 				{% autoescape off %}
@@ -170,15 +172,17 @@
 		{% for mantto in manttos  %}
 			<tr>
 				<td colspan="3" class="titulo_mtto">
+				<strong>
 					{{mantto.orden| default:"Mantto No programado"}} {{mantto.orden.rutina}}
+				</strong>	
 				</td>
 				<td colspan="3" class="titulo_mtto">{{mantto.creado}}</td>
 				<td colspan="1" class="titulo_mtto">{{mantto.tipo}}</td>
 			</tr>		
 			<tr>
-			    <td class="sub_titulo_mtto" colspan="2">Paro de Equipo</td>	
-			    <td class="sub_titulo_mtto" colspan="2">Duracion de Paro</td>
-				<td class="sub_titulo_mtto" colspan="3">Estado Final</td>	
+			    <th class="sub_titulo_mtto" colspan="2">Paro de Equipo</th>	
+			    <th class="sub_titulo_mtto" colspan="2">Duracion de Paro</th>
+				<th class="sub_titulo_mtto" colspan="3">Estado Final</th>	
 			</tr>
 			<tr>
 				<td colspan="2">{{mantto.paro_operacion|yesno:"Si,No"}}</td>	
@@ -186,9 +190,9 @@
 			    <td colspan="3"> {{mantto.estado_final}} </td>
 			</tr>
 			<tr>
-			    <td class="sub_titulo_mtto2" colspan="7" style="text-align:left">
+			    <th class="sub_titulo_mtto2" colspan="7" style="text-align:left">
 			    	Trabajo Realizado
-			    </td>			    	
+			    </th>			    	
 			</tr>
 			<tr>
 				{% autoescape off %}
