--- a/sgim/templates/report_base.html
+++ b/sgim/templates/report_base.html
@@ -16,11 +16,11 @@
  @page {
         size: letter ;
         /*top right buttom left*/
-        margin: 2.5cm 1.5cm 2cm 1.5cm ;
+        margin: 2.3cm 1.5cm 2cm 1.5cm ;
 
          @frame header_frame {           /* Static Frame */
             -pdf-frame-content: header_content;
-            width: 100%; top: 1.5cm; height: 40pt;
+            width: 100%; top: 10px; 
         }
         
         @frame footer_frame {           /* Another static Frame */
@@ -32,8 +32,19 @@
 </style>
 </head>
 <body>
-	<div id="header_content" style="text-align: center; font-family: roboto"><h4>EMPRESA ADMINISTRADORA DE AEROPUERTOS INTERNACIONALES</h4></div>
-
+	
+        <table id="header_content" >
+            <tr>
+                <td style='width:100%; padding-left:60px; vertical-align:bottom;'>
+                    <h4>EMPRESA ADMINISTRADORA DE AEROPUERTOS INTERNACIONALES</h4>
+                </td>
+                <td style='width:20%;'>
+                    <img src="/static/images/eaai_logo.jpg" style='width:60px'>
+                </td>
+            </tr>
+        </table>
+        
+  
 {% block contenido %}
     
 {% endblock contenido %}
